Automated Code Change
PiperOrigin-RevId: 608997533